...
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        Text('Bolao 2026', style: theme.textTheme.bodyMedium),
                        const SizedBox(height: 4),
                        Text(
                          'Fase de grupos',
                          style: theme.textTheme.headlineMedium,
                        ),
                      ],
                    ),
                  ),
                  LogoutCircleButton(
...
